--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');
+ @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');
 
 * {
   margin: 0;
@@ -14,11 +14,11 @@ body {
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  background: url('./assets/background.jpg');
+  /* background: url('./assets/background.jpg'); */
   background-size: cover;
   background-position: center;
 }
 
 code {
   font-family: 'source-code-pro', 'Menlo', 'Monaco', 'Consolas', 'Courier New', monospace;
-}
+} 
