--- a/src/components/NavBarStyles.css
+++ b/src/components/NavBarStyles.css
@@ -1,7 +1,11 @@
+
+
 .bar {
-    background-color: green;
+    background-color: #09B96D;
     position:fixed;
     top:0px;
+    
+   
 }
 .DropdownNotifications {
     max-height:200vh;
