--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,5 +1,4 @@
- 
- @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap");
 
 * {
   margin: 0;
@@ -7,8 +6,12 @@
   box-sizing: border-box;
 }
 
+.loading {
+  font-size: 100px;
+}
+
 body {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   display: flex;
@@ -20,227 +23,300 @@ body {
 }
 
 code {
-  font-family: 'source-code-pro', 'Menlo', 'Monaco', 'Consolas', 'Courier New', monospace;
-} 
+  font-family: "source-code-pro", "Menlo", "Monaco", "Consolas", "Courier New",
+    monospace;
+}
 
 /*  HOME  */
 
 HomePageBody {
-  background-color:beige;
+  background-color: beige;
   box-shadow: 0 4px 8px 0;
   max-width: 300px;
-  margin:auto;}
-
-  /* LOGIN FORM  */
-
-  .wrapper { 
-    width: 420px;
-    background: transparent;
-    border: 2px solid rgba(255, 255, 255, .2);
-    backdrop-filter: blur(30px);
-    box-shadow: 0 0 10px rgba(0, 0, 0, .2);
-    color:  #004737;
-    ;
-    border-radius: 10px;
-    padding: 30px 40px;
+  margin: auto;
 }
 
-.wrapper h1 {
-    font-size: 36px;
-    text-align: center;
+/* LOGIN FORM  */
+
+.imagen {
+  width: 390px;
+  height: auto;
+  top: 137px;
+  left: -1px;
+  gap: 0px;
+  opacity: 0.5;
+}
+.homep {
+  color: #004737;
+  z-index: 1;
+  opacity: 3;
+  font-size: 14px;
+}
+.homediv {
+  display: flex;
+  background-color: #09b96d;
+  color: #004737;
+  gap: 50px;
+  padding: 2%;
+}
+.homeli {
+  /* eBanca */
+
+  width: 356px;
+  height: 104px;
+  left: 17px;
+  top: 565px;
+
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 24px;
+  margin-left: 30px;
+  color: black;
+  opacity: 0.7;
+  margin-top: 2%;
+
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.3);
 }
 
-.wrapper .input-box {
-    position: relative;
-    width: 100%;
-    height: 50px;
-    margin: 30px 0;
+.button2 {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 16px;
+  gap: 5.13px;
+  margin-bottom: 10%;
+  margin-top: 15%;
+
+  width: 357px;
+  height: 46px;
+  left: 16px;
+  top: 400px;
+
+  background: #09b96d;
+  color: #ffffff;
+  box-shadow: 0px 0.534375px 1.06875px rgba(16, 24, 40, 0.05);
+  border-radius: 427.5px;
 }
 
-.input-box input {
-    width: 100%;
-    height: 100%;
-    background: transparent;
-    border: none;
-    outline: none;
-    border: 2px solid rgba(255, 255, 255, .2);
-    border-radius: 40px;
-    font-size: 16px;
-    color:  #09B96D;
-    ;
-    padding: 20px 45px 20px 20px;
+.button1 {
+  padding: 10px;
+  gap: 10px;
+
+  width: 114px;
+  height: 41px;
+  left: 227px;
+  top: 93px;
+
+  background: #ff7d28;
+  border: 1px solid #ffffff;
+  border-radius: 20px;
 }
 
-.input-box input::placeholder {
-    color: #09B96D;
-    ;
+.login h2 {
+  text-align: center;
+  width: 334px;
+  height: 29px;
+  left: 28px;
+  top: 187px;
+
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 29px;
+
+  margin-top: 7%;
+  margin-bottom: 7%;
+
+  color: #004737;
 }
 
-.input-box .icon {
-    position: absolute;
-    right: 20px;
-    top: 50%;
-    transform: translateY(-50%);
-    font-size: 16px;
+.login input {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 8px;
+  margin-top: 5%;
+  margin-bottom: 5%;
+  width: 356px;
+  height: 40px;
+  left: 17px;
+  top: 232px;
 }
 
+.login h3 {
+  /* eBanca */
 
-.remember-forgot label input {
-    accent-color: #09B96D;
-
-    margin-right: 4px;
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
+  /* identical to box height */
+  text-align: center;
+  color: #004737;
+  margin-bottom: 5%;
+}
+.loginregistrer {
+  text-decoration: none;
 }
 
-.remember-forgot a {
-    color: #09B96D;
-    text-decoration: none;
+.loginregistrer1 {
+  /* Buttons */
+
+  box-sizing: border-box;
+  color: #ff7d28;
+  font-size: 12px;
+
+  /* Auto layout */
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 16px;
+  gap: 5.13px;
+  text-decoration: none;
+
+  width: 142px;
+  height: 41px;
+
+  background: #fbf8e9;
+  border: 1px solid #ff7d28;
+  box-shadow: 0px 0.534375px 1.06875px rgba(16, 24, 40, 0.05);
+  border-radius: 427.5px;
+
+  /* Inside auto layout */
+  flex: none;
+  order: 1;
+  flex-grow: 0;
 }
 
-.remember-forgot a:hover {
-    text-decoration: underline;
+.login h4 {
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  margin-left: 80px;
+
+  width: 202px;
+  height: 41px;
+
+  background: #fbf8e9;
+  border: 1px solid #ff7d28;
+  color: #ff7d28;
+  box-shadow: 0px 0.534375px 1.06875px rgba(16, 24, 40, 0.05);
+  border-radius: 427.5px;
 }
 
-.wrapper button {
-    width: 100%;
-    height: 45px;
-    background: #09B96D;
-    border: none;
-    outline: none;
-    border-radius: 40px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, .1);
-    cursor: pointer;
-    font-size: 16px;
-    color: #333;
-    font-weight: 700;
+.loginline {
+  border-bottom: 1px solid;
+  width: 90%;
+  margin-left: 5%;
+  color: #576a66;
+  margin-bottom: 5%;
 }
 
-.wrapper .register-link {
-    font-size: 14.5px;
-    text-align: center;
-    margin: 20px 0 15px;
-}
-
-.register-link p a {
-    color: #09B96D;
-    text-decoration: none;
-    font-weight: 600;
-}
-
-.register-link p a:hover {
-    text-decoration: underline;
-}
-   
-
-.ingresando{
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        align-items: center;
-        padding: 16px;
-        gap: 5.13px;
-
-        position: absolute;
-        width: 357px;
-        height: 46px;
-        left: 16px;
-        top: 400px;
-
-        background: rgba(120, 120, 128, 0.12);
-        box-shadow: 0px 0.534375px 1.06875px rgba(16, 24, 40, 0.05);
-        border-radius: 427.5px;
-    }
-    
 /* NAR NarBarSyles */
 
-    .bar {
-      background-color: #09B96D;
-      position: fixed;
-      
-      top:0px;
-         
-  }
-  .DropdownNotifications {
-      max-height:200vh;
-      max-width:200vh;
-      overflow:scroll;
-  }
-           
-    /* NOTIFICATION */
+.bar {
+  display: flex;
+  justify-content: space-around;
+  width: 390px;
+  height: 64px;
+  left: 0px;
+  background-color: #09b96d;
+}
+.bar h1 {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  padding-top: 5%;
+  font-size: 1.5rem;
+  gap: 5px;
+  width: 125.93px;
+  height: 29px;
+  left: 17px;
 
-    .DropdownNotifications {
-      max-height:200vh;
-      overflow:scroll;
-  }
- 
-  /* REGISTERFROM */
-
-
-  body {
-    /* fallback for old browsers */
-    background: white;
-   
+  color: white;
+  background-color: #09b96d;
+}
+button.menu {
+  color: white;
+  margin-left: 150px;
+  text-decoration: none;
+  background-color: #09b96d;
+  width: 40px;
+  height: 40px;
+  border: #09b96d;
+  font-size: 1.5rem;
+  padding-top: 5%;
 }
 
+/* NOTIFICATION */
+
+/* REGISTERFROM */
+
+body {
+  /* fallback for old browsers */
+  background: white;
+}
 
 /*TRANSFERENCIA*/
 
-h1{font-size: medium;
-  text-align: start;}
-  
-  
-  .line{  border-bottom: 1px solid ;
-      width: 90%;
-      margin-left: 5%;
-      color: #576a66;
-  }
-  .cuenta{display: flex;
-      justify-content: start;
-      gap: 40px;;
-      border-style:groove;
-      color:#004737;
-      font-size: 1rem;
-      margin-top: 10%;
-      padding: 2%;
-  
-     }
-  
-  
-  
-  
-  .footer{margin-top: 70%;}
- 
-  
-  .option1{display:flex;
+h1 {
+  font-size: medium;
+  text-align: start;
+}
+
+.line {
+  border-bottom: 1px solid;
+  width: 90%;
+  margin-left: 5%;
+  color: #576a66;
+}
+.cuenta {
+  display: flex;
+  justify-content: start;
+  gap: 40px;
+  border-style: groove;
+  color: #004737;
+  font-size: 1rem;
+  margin-top: 10%;
+  padding: 2%;
+}
+
+.footer {
+  margin-top: 70%;
+}
+
+.option1 {
+  display: flex;
   flex-direction: row;
   align-items: center;
-  
+
   width: 356px;
   border: 1px;
   height: 38px;
-  }
-  
-  .option2{display:flex;
-      flex-direction: row;
-      align-items: center;
-      
-      width: 356px;
-      border: 1px;
-      height: 38px;
-  }
-  
-  
-  .footer{
+}
+
+.option2 {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+
+  width: 356px;
+  border: 1px;
+  height: 38px;
+}
+
+.footer {
   position: absolute;
   width: 389px;
   height: 96px;
   left: 0px;
   top: 669px;
-  
-  }
-  
-  
-  
-  
-
-
-
+}
