--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -221,7 +221,22 @@ HomePageBody {
 }
 
 /* NAR NarBarSyles */
+.button1NavBar {
+  display:flex;
+  padding: 10px;
+  margin-top:30%;
+  margin-left:250%;
+  /* gap: 10px; */
 
+  /* width: 114px;
+  height: 41px;
+  left: 227px;
+  top: 93px; */
+
+  background: #ff7d28;
+  border: 1px solid #ffffff;
+  border-radius: 20px;
+}
 .bar {
   display: flex;
   justify-content: space-around;
@@ -256,9 +271,14 @@ button.menu {
   padding-top: 5%;
 }
 DropdownLinks{
-  height:70px;
-  overflow-y:scroll;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 113px 8px;
+  gap: 20px;
+  isolation: isolate;
   
+
 
 }
 
