--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -13,7 +13,7 @@
 body {
   font-family: "Poppins", sans-serif;
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  /* -moz-osx-font-smoothing: grayscale; */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -239,7 +239,7 @@ HomePageBody {
 }
 .bar {
   display: flex;
-  justify-content: space-around;
+  /* justify-content: space-around; */
   width: 390px;
   height: 64px;
   left: 0px;
@@ -270,16 +270,27 @@ button.menu {
   font-size: 1.5rem;
   padding-top: 5%;
 }
-DropdownLinks{
-  display: flex;
+
+.dropdownlinks {
+
+  display:flex;
+  font-size: smaller;
+  max-height:70px;
+  max-width:50px;
+  overflow:scroll
+
+  /* display: flex;
   flex-direction: column;
   align-items: center;
   padding: 113px 8px;
   gap: 20px;
   isolation: isolate;
-  
+   */
 
 
+}
+.DropdownLinksItem {
+  font-size: small;
 }
 
 /* NOTIFICATION */
