--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -17,9 +17,13 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 100vh;
+
   background-size: cover;
   background-position: center;
+}
+.root {
+  min-height: 100vh;
+  width: 100vw;
 }
 
 code {
@@ -62,24 +66,27 @@ HomePageBody {
   padding: 2%;
 }
 
+.homeback {
+  background-image: url("./young-couple-looking-cell-phone.jpg");
+  background-repeat: no-repeat;
+  display: flex;
+  height: 100%;
+  flex-direction: column;
+  justify-content: end;
+  background-size: cover;
+  background-position: center;
+  opacity: 0.7;
+}
 .homeli {
-  /* eBanca */
-
-  width: 356px;
-  height: 104px;
-  left: 17px;
-  top: 565px;
-
-  font-family: "Montserrat";
+  background-color: rgba(87, 106, 102, 0.7);
+  height: 151px;
+  padding: 10px 50px;
+  font-family: "Montserrat", sans-serif;
   font-style: normal;
   font-weight: 600;
   font-size: 20px;
   line-height: 24px;
-  margin-left: 30px;
-  color: black;
-  opacity: 0.7;
-  margin-top: 2%;
-
+  color: white;
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.3);
 }
 
@@ -112,20 +119,20 @@ HomePageBody {
   height: 41px;
   left: 227px;
   top: 93px;
-
+  color: white;
   background: #ff7d28;
   border: 1px solid #ffffff;
   border-radius: 20px;
 }
-
+.login {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding-bottom: 100px;
+}
 .login h2 {
   text-align: center;
-  width: 334px;
-  height: 29px;
-  left: 28px;
-  top: 187px;
-
-  font-family: "Montserrat";
   font-style: normal;
   font-weight: 600;
   font-size: 24px;
@@ -137,6 +144,10 @@ HomePageBody {
   color: #004737;
 }
 
+.login form {
+  padding: 10px;
+}
+
 .login input {
   display: flex;
   flex-direction: column;
@@ -146,8 +157,9 @@ HomePageBody {
   margin-bottom: 5%;
   width: 356px;
   height: 40px;
-  left: 17px;
-  top: 232px;
+  padding: 0px 10px;
+  border-color: gray;
+  border-radius: 10px;
 }
 
 .login h3 {
@@ -225,32 +237,47 @@ HomePageBody {
 }
 
 /* NAR NarBarSyles */
+.authPage {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
 .button1NavBar {
   display: flex;
-  padding: 10px;
-  margin-top: 30%;
-  margin-left: 250%;
-  /* gap: 10px; */
-
-  /* width: 114px;
-  height: 41px;
-  left: 227px;
-  top: 93px; */
-
+  padding: 10px 20px;
   background: #ff7d28;
   border: 1px solid #ffffff;
   border-radius: 20px;
+  color: white;
+  text-decoration: none;
 }
-
+.bardiv {
+  display: flex;
+  align-items: center;
+  /* justify-content: end; */
+  /* width: min-content; */
+}
 .bar {
   display: flex;
-  /* justify-content: space-around; */
-  width: 390px;
+  padding: 10px;
+  justify-content: space-between;
+  align-items: center;
+  width: 100vw;
   height: 64px;
   left: 0px;
   background-color: #09b96d;
 }
-
+.logo {
+  width: full;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: x-large;
+  color: white;
+  font-weight: 700;
+  gap: 5px;
+}
 .bar h1 {
   display: flex;
   flex-direction: row;
@@ -268,7 +295,7 @@ HomePageBody {
 
 button.menu {
   color: white;
-  margin-left: 150px;
+  /* margin-left: 150px; */
   text-decoration: none;
   background-color: #09b96d;
   width: 40px;
@@ -279,21 +306,18 @@ button.menu {
 }
 
 .dropdownlinks {
-
   display: flex;
   font-size: smaller;
   max-height: 70px;
   max-width: 50px;
-  overflow: scroll
-    /* display: flex;
+  overflow: scroll;
+  /* display: flex;
   flex-direction: column;
   align-items: center;
   padding: 113px 8px;
   gap: 20px;
   isolation: isolate;
    */
-
-
 }
 
 .DropdownLinksItem {
@@ -317,20 +341,13 @@ h1 {
 }
 
 .title {
-  margin-top: 10%;
-  width: 162px;
-  height: 29px;
-  left: 16px;
-  top: 194px;
-
-  font-family: 'Montserrat';
+  padding: 0px 20px;
   font-style: normal;
   font-weight: 600;
   font-size: 24px;
   line-height: 29px;
 
   color: #004737;
-
 }
 
 .line {
@@ -342,35 +359,39 @@ h1 {
 }
 
 .cuenta {
+  margin: 0px 10px;
+  padding: 10px 20px;
   display: flex;
-  justify-content: start;
-  gap: 40px;
+  justify-content: space-between;
+  align-items: center;
+
   border-style: groove;
   color: #004737;
   font-size: 1rem;
   margin-top: 10%;
-  padding: 2%;
   border-radius: 10px 10px 0px 0px;
-  width: 356px;
-  height: 72px;
-  left: 17px;
-  top: 284px;
 }
 
+.logoPerson {
+  font-size: xx-large;
+  /* width: 10%; */
+}
 .cuentap {
-  color: #09b96d
+  width: 100%;
+  color: #09b96d;
 }
 
 .option1 {
   display: flex;
   flex-direction: row;
   align-items: center;
+  margin: 0px 10px;
 
   width: 356px;
   border: 1px;
   height: 38px;
 
-  background: #FFFFFF;
+  background: #ffffff;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 0px 0px 10px 10px;
   margin-top: 5%;
@@ -381,43 +402,50 @@ h1 {
   display: flex;
   flex-direction: row;
   align-items: center;
+  margin: 0px 10px;
 
   width: 356px;
   border: 1px;
   height: 38px;
   color: #004737;
 
-  background: #FFFFFF;
+  background: #ffffff;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 10px;
   margin-top: 10%;
-
 }
 
 .footer {
-  width: 389px;
   height: 96px;
-  left: 0px;
-  top: 669px;
-  margin-top: 20%;
   color: #004737;
   font-size: 25px;
   display: flex;
   justify-content: space-around;
+  align-items: center;
 }
 
 .footer p {
   color: #004737;
-  margin-top: 80%;
-  margin-left: -120%;
-
 }
 
 .none {
   text-decoration: none;
-  font-size: 13px;
+  display: flex;
+  flex-direction: column-reverse;
+  align-items: center;
+
+  color: #004737;
 }
 
+.none p {
+  font-size: 13px;
+}
+.none:hover {
+  color: white;
+  background-color: #09b96d;
+  border-radius: 10px;
+  padding: 2px;
+}
 
 /*TRANSFER PAGE*/
 .tcontact {
@@ -433,6 +461,6 @@ h1 {
   height: 667px;
   left: 38px;
   top: 92px;
-  background: #FFFFFF;
+  background: #ffffff;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
