--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -410,7 +410,6 @@ h1 {
   color: #004737;
   margin-top: 80%;
   margin-left: -120%;
-
 }
 
 .none {
@@ -419,11 +418,13 @@ h1 {
 }
 
 
-/*TRANSFER PAGE*/
+/* TRANSFER PAGE */
 .tcontact {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
+  /* Añadido para centrar verticalmente */
   padding: 113px 8px;
   gap: 20px;
   isolation: isolate;
@@ -431,8 +432,61 @@ h1 {
   position: absolute;
   width: 353px;
   height: 667px;
-  left: 38px;
-  top: 92px;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  /* Centra el div horizontal y verticalmente */
   background: #FFFFFF;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.terceros {
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: 16px;
+  width: 332px;
+  height: 38px;
+  background: #FFFFFF;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+  flex: none;
+  order: 1;
+  flex-grow: 0;
+  z-index: 1;
+}
+
+.ecuentas {
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: 16px;
+  width: 332px;
+  height: 38px;
+  background: #FFFFFF;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+  flex: none;
+  order: 2;
+  flex-grow: 0;
+  z-index: 2;
+}
+
+.ndestinatario {
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: 16px;
+  width: 330px;
+  height: 38px;
+  background: #FFFFFF;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+  flex: none;
+  order: 3;
+  flex-grow: 0;
+  z-index: 3;
 }
