--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -460,26 +460,24 @@ h1 {
   padding: 2px;
 }
 
-/* TRANSFER PAGE */
 .tcontact {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  /* Esto centrará el contenido verticalmente */
   padding: 20px;
-  /* Ajustado el padding */
   gap: 20px;
-  isolation: isolate;
   color: #004737;
   position: absolute;
   width: 353px;
   height: 667px;
-  left: 38px;
-  top: 92px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   background: #ffffff;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
+
 
 /* Divs que forman el contenido */
 .terceros,
