--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -466,18 +466,95 @@ h1 {
   align-items: center;
   justify-content: center;
   padding: 20px;
-  gap: 20px;
+  /* Espaciado interno */
+  gap: 10px;
   color: #004737;
   position: absolute;
-  width: 353px;
+  width: 100%;
+  max-width: 353px;
+  /* Ancho máximo */
   height: 667px;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   background: #ffffff;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  box-sizing: border-box;
 }
 
+.options-container {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  padding: 0 15px;
+  /* Espaciado a los lados */
+}
+
+.option-button {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+  /* Ajustar según sea necesario */
+  text-decoration: none;
+  color: #004737;
+  font-size: 1rem;
+  width: 100%;
+  /* Asegura que ocupe el 100% del ancho del contenedor */
+  box-sizing: border-box;
+  transition: color 0.3s ease;
+  background-color: transparent;
+  margin: 5px 0;
+  /* Espacio uniforme arriba y abajo */
+}
+
+.option-button:hover {
+  color: #00bfa5;
+}
+
+.option-button h3 {
+  margin: 0;
+}
+
+.option-button .arrow {
+  font-size: 1.2rem;
+  color: #004737;
+  margin-left: auto;
+}
+
+.option-button:hover .arrow {
+  color: #00bfa5;
+}
+
+/* Responsividad para pantallas más pequeñas */
+@media (max-width: 768px) {
+  .option-button {
+    width: 100%;
+    /* Mantener el ancho completo en pantallas pequeñas */
+  }
+}
+
+
+
+/* Footer existente (sin cambios) */
+.footerTP {
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+  width: 100%;
+}
+
+.none {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: #004737;
+  text-decoration: none;
+}
+
+.none:hover {
+  color: #00bfa5;
+}
 
 
 /* Divs que forman el contenido */
