--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -534,28 +534,38 @@ h1 {
   }
 }
 
-
-
 /* Footer existente (sin cambios) */
-.footerTP {
+/* .footerTP {
   display: flex;
   justify-content: space-between;
   padding: 10px;
   width: 100%;
+} */
+.footerTP {
+  height: 96px;
+  color: #004737;
+  font-size: 25px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding: 10px;
+  width: 100%;
+  /* gap: 1; */
 }
 
 .none {
   display: flex;
   flex-direction: column;
-  align-items: center;
   color: #004737;
   text-decoration: none;
+  padding: 10px;
 }
 
 .none:hover {
-  color: #00bfa5;
+  background-color: #09b96d;
+  padding: 10px;
+  color: white;
 }
-
 
 /* Divs que forman el contenido */
 .terceros,
@@ -568,7 +578,7 @@ h1 {
   padding: 16px;
   width: 280px;
   height: 38px;
-  background: #FFFFFF;
+  background: #ffffff;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 10px;
   flex: none;
@@ -581,11 +591,334 @@ h1 {
 }
 
 /* Footer */
-.footerTP {
-  height: 96px;
-  color: #004737;
-  font-size: 25px;
+
+.transferPage {
+  width: 100vw;
+}
+.navTransfer {
+  background: #09b96d;
+  height: 70px;
   display: flex;
   justify-content: space-around;
   align-items: center;
+  color: white;
+  font-size: 24px;
+  font-weight: 600;
+  width: 100%;
+}
+.navTransfer a {
+  text-decoration: none;
+  color: white;
+}
+.transferPage div {
+  height: 100%;
+  /* padding-left: 20px; */
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+.transferPage div a {
+  text-decoration: none;
+  height: 100px;
+  display: flex;
+  color: #09b96d;
+  font-size: 18px;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.transferPage div .contact {
+  color: #004737;
+  height: max-content;
+  display: flex;
+  flex-direction: column;
+}
+.contact {
+  padding-left: 20px;
+}
+.contact h1 {
+  font-size: 24px;
+  font-weight: 600;
+}
+
+.contact h2 {
+  font-size: 16px;
+  font-weight: 500;
+}
+
+.contact input {
+  margin-top: 20px;
+  padding: 10px;
+  border: 1px solid #09b96d;
+  border-radius: 20px;
+  margin-right: 20px;
+  padding-left: 20px;
+  font-size: 18px;
+}
+
+.agenda {
+  color: #004737;
+  height: max-content;
+}
+.agenda h2 {
+  padding-left: 20px;
+}
+.agenda ul li {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  padding-left: 20px;
+  /* justify-content: center; */
+}
+.agenda ul li .alias {
+  color: #09b96d;
+  font-size: 18px;
+  font-weight: 600;
+}
+
+.agenda ul li:hover {
+  background-color: rgb(205, 206, 205);
+}
+
+.userLogo {
+  width: 12%;
+  height: auto;
+  background: #09b96d;
+  color: white;
+  padding: 8px;
+  border-radius: 100px;
+}
+.agenda ul {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.transferForm {
+  width: 100vw;
+}
+
+.transferForm .accont {
+  padding-left: 20px;
+}
+.transferForm .accont h1 {
+  color: #004737;
+  font-size: 20px;
+  padding-bottom: 20px;
+  padding-left: 10px;
+}
+.transferForm .accont div {
+  display: flex;
+  align-items: center;
+}
+
+.transferForm .accont div div {
+  display: flex;
+  flex-direction: column;
+  align-items: self-start;
+  padding-left: 20px;
+}
+.user {
+  width: 80%;
+}
+.user h2 {
+  color: #09b96d;
+  font-size: 20px;
+  font-weight: 500;
+}
+
+.transferForm form {
+  padding-left: 20px;
+  display: flex;
+  flex-direction: column;
+  height: 50%;
+  gap: 20px;
+}
+.transferForm form h1 {
+  color: #004737;
+  font-size: 18px;
+}
+.transferForm form input {
+  padding: 10px 20px;
+  border: 1px solid gray;
+  margin-right: 20px;
+  border-radius: 10px;
+  font-size: 17px;
+}
+
+.transferForm form button {
+  margin-right: 20px;
+  background: #09b96d;
+  color: white;
+  padding: 10px;
+  border-radius: 20px;
+  border: none;
+  font-size: 20px;
+}
+
+.confirmPage {
+  width: 100vw;
+  align-items: center;
+}
+.confirmPage .top {
+  padding-top: 50px;
+  padding-bottom: 30px;
+  /* -bottom: 50px; */
+  color: #004737;
+  font-weight: 700;
+  font-size: 20px;
+  text-align: center;
+  width: 80%;
+  border-bottom: 2px solid rgb(87, 106, 102, 0.4);
+}
+.origin {
+  width: 84%;
+  color: #004737;
+  font-weight: 500;
+}
+.origin h1 {
+  color: #ff7d28;
+}
+.destino {
+  width: 85%;
+}
+.destino h1 {
+  color: #09b96d;
+  font-size: 20px;
+  font-weight: 700;
+}
+.destino div {
+  display: flex;
+  justify-content: space-between;
+}
+.nose {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.selec {
+  color: #004737;
+  width: 85%;
+}
+.selec h1 {
+  padding-bottom: 10px;
+  font-weight: 700;
+  font-size: 20px;
+}
+.selec div {
+  width: 100%;
+  padding: 5px 20px;
+  border: 1px solid black;
+  border-radius: 10px;
+}
+.selec div:hover {
+  color: white;
+  background-color: #09b96d;
+  border: none;
+}
+.dialog-backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(117, 117, 117, 0.9); /* Color con 90% de opacidad */
+  backdrop-filter: blur(8px); /* Aplica desenfoque */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1;
+}
+/* Estilos para el diálogo */
+.custom-dialog {
+  border-radius: 10px;
+  padding: 20px;
+  text-align: center;
+  width: 80%;
+  background-color: white;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border: none;
+  color: #004737;
+  /* display: flex;
+  flex-direction: column;
+  justify-content: center; */
+}
+.custom-dialog p {
+  font-size: 18px;
+}
+.custom-dialog h1 {
+  padding-bottom: 10px;
+  text-align: center;
+}
+/* Estilos para el botón de cerrar */
+.close-dialog-btn {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background-color: transparent;
+  border: none;
+  font-size: 20px;
+  color: #333;
+  cursor: pointer;
+  transition: color 0.3s ease;
+}
+.transferComplete {
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /* justify-content: center; */
+}
+.transferComplete .nose {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  font-weight: 600;
+  gap: 10px;
+  font-size: 20px;
+  color: #004737;
+  padding: 40px 0px;
+  border-bottom: 1px solid gray;
+  width: 80%;
+}
+
+.transferComplete .nose svg {
+  width: 20%;
+  height: auto;
+  color: #09b96d;
+}
+.transferComplete .nose2 {
+  text-align: center;
+  color: #004737;
+  font-size: 18px;
+  padding: 20px 0px;
+}
+.price {
+  font-size: 20px;
+  font-weight: 600;
+}
+
+.nose2 .number {
+  font-weight: 600;
+}
+.transferComplete a {
+  width: 90%;
+  margin: 20px;
+}
+.transferComplete a button {
+  width: 100%;
+  background: white;
+  color: #09b96d;
+  border: 1px solid #09b96d;
+  padding: 10px;
+  border-radius: 20px;
+  font-size: 20px;
 }
